fixed text alignment issue

--- a/assets/bl-styling.css
+++ b/assets/bl-styling.css
@@ -5,8 +5,6 @@
 .bl-text-container {
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /* DESKTOP SECTION HEIGHT */
